Fixed fullscreen formatting and added hints

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .column {
       float: left;
       width: 33.33%;
-      padding: 10px;
+      padding: 5px;
       padding-right: 30px;
     }
 
@@ -22,6 +22,11 @@
       display: table;
       clear: both;
     }
+
+    input {
+      margin-bottom: 10px;
+      display: block;
+    }
   </style>
 
   <body>
@@ -30,9 +35,33 @@
     <div class="row">
       <!-- Assignment Name column -->
       <div class="column">
-        <p>Assignment Name (Optional)</p>
+        <p>
+          Assignment Name <br />
+          (Optional)
+        </p>
         <!-- TODO: Make the padding below each text field bigger, they are too close -->
-        <input type="text" id="assignmentName1" size="15" />
+        <div class="assignmentName">
+          <input
+            type="text"
+            id="assignmentName1"
+            size="15"
+            placeholder="Ex: Exam 1"
+          />
+          <input
+            type="text"
+            id="assignmentName2"
+            size="15"
+            placeholder="Ex: Homework 1"
+          />
+          <input type="text" id="assignmentName3" size="15" />
+          <input type="text" id="assignmentName4" size="15" />
+          <input type="text" id="assignmentName5" size="15" />
+          <input type="text" id="assignmentName6" size="15" />
+          <input type="text" id="assignmentName7" size="15" />
+          <input type="text" id="assignmentName8" size="15" />
+          <input type="text" id="assignmentName9" size="15" />
+          <input type="text" id="assignmentName10" size="15" />
+        </div>
       </div>
       <!-- Assignment Grade column -->
       <div class="column">
@@ -41,6 +70,61 @@
         <input
           type="text"
           id="grade1"
+          size="5"
+          placeholder="Ex: 92.5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade2"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade3"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade4"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade5"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade6"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade7"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade8"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade9"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade9"
           size="5"
           style="margin-left: 49px; text-align: right"
         />
@@ -52,6 +136,61 @@
         <input
           type="text"
           id="gradeWeight1"
+          size="5"
+          placeholder="Ex: 20"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight2"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight3"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight4"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight5"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight6"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight7"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight8"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight9"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight10"
           size="5"
           style="margin-left: 55px; text-align: right"
         />
