--- a/index.html
+++ b/index.html
@@ -41,18 +41,8 @@
         </p>
         <!-- TODO: Make the padding below each text field bigger, they are too close -->
         <div class="assignmentName">
-          <input
-            type="text"
-            id="assignmentName1"
-            size="15"
-            placeholder="Ex: Exam 1"
-          />
-          <input
-            type="text"
-            id="assignmentName2"
-            size="15"
-            placeholder="Ex: Homework 1"
-          />
+          <input type="text" id="assignmentName1" size="15" placeholder="Ex: Exam 1" />
+          <input type="text" id="assignmentName2" size="15" placeholder="Ex: Homework 1" />
           <input type="text" id="assignmentName3" size="15" />
           <input type="text" id="assignmentName4" size="15" />
           <input type="text" id="assignmentName5" size="15" />
@@ -67,133 +57,31 @@
       <div class="column">
         <p>Assignment Grade</p>
         <br />
-        <input
-          type="text"
-          id="grade1"
-          size="5"
-          placeholder="Ex: 92.5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade2"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade3"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade4"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade5"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade6"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade7"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade8"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade9"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
-        <input
-          type="text"
-          id="grade9"
-          size="5"
-          style="margin-left: 49px; text-align: right"
-        />
+        <input type="text" id="grade1" size="5" placeholder="Ex: 92.5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade2" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade3" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade4" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade5" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade6" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade7" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade8" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade9" size="5" style="margin-left: 49px; text-align: right" />
+        <input type="text" id="grade10" size="5" style="margin-left: 49px; text-align: right" />
       </div>
       <!-- Assignment Weight column -->
       <div class="column">
         <p>Assignment Weight</p>
         <br />
-        <input
-          type="text"
-          id="gradeWeight1"
-          size="5"
-          placeholder="Ex: 20"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight2"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight3"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight4"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight5"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight6"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight7"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight8"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight9"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
-        <input
-          type="text"
-          id="gradeWeight10"
-          size="5"
-          style="margin-left: 55px; text-align: right"
-        />
+        <input type="text" id="gradeWeight1" size="5" placeholder="Ex: 20" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight2" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight3" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight4" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight5" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight6" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight7" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight8" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight9" size="5" style="margin-left: 55px; text-align: right" />
+        <input type="text" id="gradeWeight10" size="5" style="margin-left: 55px; text-align: right" />
       </div>
 
       <!-- Below br caused column width to shrink -->
