Super ugly code
I am putting some super ugly code up while I take a break, I will come back to this later.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,18 @@
         <p>Assignment Name<br />(Optional)</p>
         <!-- TODO: Make the padding below each text field bigger, they are too close -->
         <div class="assignmentName">
-          <input type="text" id="assignmentName1" size="15" placeholder="Ex: Exam 1" />
-          <input type="text" id="assignmentName2" size="15" placeholder="Ex: Homework 1" />
+          <input
+            type="text"
+            id="assignmentName1"
+            size="15"
+            placeholder="Ex: Exam 1"
+          />
+          <input
+            type="text"
+            id="assignmentName2"
+            size="15"
+            placeholder="Ex: Homework 1"
+          />
           <input type="text" id="assignmentName3" size="15" />
           <input type="text" id="assignmentName4" size="15" />
           <input type="text" id="assignmentName5" size="15" />
@@ -55,39 +65,142 @@
       <div class="column">
         <p>Assignment Grade</p>
         <br />
-        <input type="text" id="grade1" size="5" placeholder="Ex: 92.5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade2" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade3" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade4" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade5" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade6" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade7" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade8" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade9" size="5" style="margin-left: 49px; text-align: right" />
-        <input type="text" id="grade10" size="5" style="margin-left: 49px; text-align: right" />
+        <input
+          type="text"
+          id="grade1"
+          size="5"
+          placeholder="Ex: 92.5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade2"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade3"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade4"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade5"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade6"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade7"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade8"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade9"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
+        <input
+          type="text"
+          id="grade10"
+          size="5"
+          style="margin-left: 49px; text-align: right"
+        />
       </div>
 
       <!-- Assignment Weight column -->
       <div class="column">
         <p>Assignment Weight</p>
         <br />
-        <input type="text" id="gradeWeight1" size="5" placeholder="Ex: 20" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight2" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight3" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight4" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight5" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight6" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight7" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight8" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight9" size="5" style="margin-left: 55px; text-align: right" />
-        <input type="text" id="gradeWeight10" size="5" style="margin-left: 55px; text-align: right" />
+        <input
+          type="text"
+          id="gradeWeight1"
+          size="5"
+          placeholder="Ex: 20"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight2"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight3"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight4"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight5"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight6"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight7"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight8"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight9"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
+        <input
+          type="text"
+          id="gradeWeight10"
+          size="5"
+          style="margin-left: 55px; text-align: right"
+        />
       </div>
 
       <!-- Below br caused column width to shrink -->
       <br />
       <label for="desiredGrade">Desired Grade:</label>
       <input type="text" id="desiredGrade" size="5" style="text-align: right" />
-      <button onclick="calculateGrade(
+      <button
+        onclick="calculateGrade(
         document.getElementById('grade1').value,
         document.getElementById('grade2').value,
         document.getElementById('grade3').value,
@@ -109,7 +222,10 @@
         document.getElementById('gradeWeight8').value,
         document.getElementById('gradeWeight9').value,
         document.getElementById('gradeWeight10').value
-      )">Calculate Average Grade Needed</button>
+      )"
+      >
+        Calculate Average Grade Needed
+      </button>
 
       <p>Average grade needed on remaining assignments to get desired grade:</p>
       <p id="gradeNeeded"></p>
@@ -137,10 +253,125 @@
         gradeWeight8,
         gradeWeight9,
         gradeWeight10
-      )
-      {
+      ) {
+        // We need to set values to fill in based on if the user entered that data
+        var calculateValueArray = new Array(10);
+        console.log(calculateValueArray);
+        let count = 0;
+        var denominator = 0;
 
-        document.getElementById("gradeNeeded").innerHTML = grade1;
+        // Really ugly if statement, fix this later
+        // TODO: Handle user error of putting non-number characters in the input fields
+        if (isNaN(parseFloat(grade1)) && isNaN(parseFloat(gradeWeight1))) {
+          console.log("Inputs not valid in row one.");
+        } else {
+          grade1 = parseFloat(grade1);
+          gradeWeight1 = parseFloat(gradeWeight1);
+          calculateValueArray[0] = grade1 * gradeWeight1;
+          denominator += denominator + parseFloat(gradeWeight1);
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade2)) && isNaN(parseFloat(gradeWeight2))) {
+          console.log("Inputs not valid in row two.");
+        } else {
+          grade2 = parseFloat(grade2);
+          gradeWeight2 = parseFloat(gradeWeight2);
+          calculateValueArray[1] = grade2 * gradeWeight2;
+          denominator += gradeWeight2;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade3)) && isNaN(parseFloat(gradeWeight3))) {
+          console.log("Inputs not valid in row three.");
+        } else {
+          calculateValueArray[2] = grade3 * gradeWeight3;
+          denominator = denominator + gradeWeight3;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade4)) && isNaN(parseFloat(gradeWeight4))) {
+          console.log("Inputs not valid in row four.");
+        } else {
+          calculateValueArray[3] = grade4 * gradeWeight4;
+          denominator = denominator + gradeWeight4;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade5)) && isNaN(parseFloat(gradeWeight5))) {
+          console.log("Inputs not valid in row five.");
+        } else {
+          calculateValueArray[4] = grade5 * gradeWeight5;
+          denominator = denominator + gradeWeight5;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade6)) && isNaN(parseFloat(gradeWeight6))) {
+          console.log("Inputs not valid in row six.");
+        } else {
+          calculateValueArray[5] = grade6 * gradeWeight6;
+          denominator = denominator + gradeWeight6;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade7)) && isNaN(parseFloat(gradeWeight7))) {
+          console.log("Inputs not valid in row seven.");
+        } else {
+          calculateValueArray[6] = grade7 * gradeWeight7;
+          denominator += gradeWeight7;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade8)) && isNaN(parseFloat(gradeWeight8))) {
+          console.log("Inputs not valid in row eight.");
+        } else {
+          calculateValueArray[7] = grade8 * gradeWeight8;
+          denominator += gradeWeight8;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade9)) && isNaN(parseFloat(gradeWeight9))) {
+          console.log("Inputs not valid in row nine.");
+        } else {
+          calculateValueArray[8] = grade9 * gradeWeight9;
+          denominator += gradeWeight9;
+          count++;
+          console.log(calculateValueArray);
+        }
+        if (isNaN(parseFloat(grade10)) && isNaN(parseFloat(gradeWeight10))) {
+          console.log("Inputs not valid in row ten.");
+        } else {
+          calculateValueArray[9] = grade10 * gradeWeight10;
+          denominator += gradeWeight10;
+          count++;
+          console.log(calculateValueArray);
+        }
+
+        console.log(calculateValueArray.length);
+        console.log(count);
+
+        let numerator = 0;
+
+        for (var i = 0; i < calculateValueArray.length; i++) {
+          console.log("Loop" + i);
+
+          // We only want to add values that do not return NaN
+          // TODO: NaN can allow letters in the numbers, fix this
+          if (!isNaN(calculateValueArray[i])) {
+            numerator += calculateValueArray[i];
+          }
+        }
+
+        console.log("Numerator " + numerator);
+        console.log("Denominator " + denominator);
+
+        // To find out the students current average grade, we have to do the following:
+        // ((weight1 * grade1) + (weight * grade2) + ... )/ (weight1 + weight2 + ...)
+        var currentAverage = numerator / denominator;
+
+        console.log(currentAverage);
+
+        document.getElementById("gradeNeeded").innerHTML = currentAverage;
       }
     </script>
   </body>
